III_rok/JPP/Zadanie2/src/generated/ParGrammar.info
-----------------------------------------------------------------------------
Info file generated by Happy Version 1.20.1.1 from ParGrammar.y
-----------------------------------------------------------------------------


rule 39 is unused
rule 40 is unused
rule 41 is unused
rule 42 is unused
rule 43 is unused
rule 44 is unused
rule 45 is unused
rule 46 is unused

-----------------------------------------------------------------------------
Grammar
-----------------------------------------------------------------------------
	%start_pProgram -> Program                         (0)
	Ident -> L_Ident                                   (1)
	Integer -> L_integ                                 (2)
	String -> L_quoted                                 (3)
	Program -> ListFn                                  (4)
	Fn -> Type Ident '(' ListArg ')' Block             (5)
	ListFn -> Fn                                       (6)
	ListFn -> Fn ListFn                                (7)
	Arg -> Type Ident                                  (8)
	Arg -> 'ref' Type Ident                            (9)
	ListArg ->                                         (10)
	ListArg -> Arg                                     (11)
	ListArg -> Arg ',' ListArg                         (12)
	Block -> '{' ListStmt '}'                          (13)
	ListStmt ->                                        (14)
	ListStmt -> Stmt                                   (15)
	ListStmt -> Stmt ';' ListStmt                      (16)
	Stmt -> Block                                      (17)
	Stmt -> Type ListItem                              (18)
	Stmt -> Expr                                       (19)
	Stmt -> Ident '=' Expr                             (20)
	Stmt -> 'return' Expr                              (21)
	Stmt -> Ident '.' 'push' Expr                      (22)
	Stmt -> Ident '.' 'pop'                            (23)
	Stmt -> 'print' Expr                               (24)
	Stmt -> 'if' Expr Block                            (25)
	Stmt -> 'if' Expr Block 'else' Block               (26)
	Stmt -> 'break'                                    (27)
	Stmt -> 'continue'                                 (28)
	Stmt -> 'while' Expr Block                         (29)
	Stmt -> Fn                                         (30)
	Item -> Ident                                      (31)
	Item -> Ident '=' Expr                             (32)
	ListItem -> Item                                   (33)
	ListItem -> Item ',' ListItem                      (34)
	Type -> 'int'                                      (35)
	Type -> 'string'                                   (36)
	Type -> 'bool'                                     (37)
	Type -> 'List' '<' Type '>'                        (38)
	ListType ->                                        (39)
	ListType -> Type                                   (40)
	ListType -> Type ',' ListType                      (41)
	TypeOrRef -> Type                                  (42)
	TypeOrRef -> 'ref' Type                            (43)
	ListTypeOrRef ->                                   (44)
	ListTypeOrRef -> TypeOrRef                         (45)
	ListTypeOrRef -> TypeOrRef ',' ListTypeOrRef       (46)
	Expr7 -> Ident                                     (47)
	Expr7 -> Type '[' ListExpr ']'                     (48)
	Expr7 -> Integer                                   (49)
	Expr7 -> 'true'                                    (50)
	Expr7 -> 'false'                                   (51)
	Expr7 -> String                                    (52)
	Expr7 -> '(' Expr ')'                              (53)
	Expr6 -> Expr6 '(' ListExprOrRef ')'               (54)
	Expr6 -> Expr7                                     (55)
	Expr5 -> Ident '.' 'length'                        (56)
	Expr5 -> Ident '[' Expr ']'                        (57)
	Expr5 -> '-' Expr6                                 (58)
	Expr5 -> '!' Expr6                                 (59)
	Expr5 -> Expr6                                     (60)
	Expr4 -> Expr4 MulOp Expr5                         (61)
	Expr4 -> Expr5                                     (62)
	Expr3 -> Expr3 AddOp Expr4                         (63)
	Expr3 -> Expr4                                     (64)
	Expr2 -> Expr2 RelOp Expr3                         (65)
	Expr2 -> Expr3                                     (66)
	Expr1 -> Expr2 '&&' Expr1                          (67)
	Expr1 -> Expr2                                     (68)
	Expr -> Expr1 '||' Expr                            (69)
	Expr -> Expr1                                      (70)
	ListExpr ->                                        (71)
	ListExpr -> Expr                                   (72)
	ListExpr -> Expr ',' ListExpr                      (73)
	ExprOrRef -> Expr                                  (74)
	ExprOrRef -> 'ref' Ident                           (75)
	ListExprOrRef ->                                   (76)
	ListExprOrRef -> ExprOrRef                         (77)
	ListExprOrRef -> ExprOrRef ',' ListExprOrRef       (78)
	AddOp -> '+'                                       (79)
	AddOp -> '-'                                       (80)
	MulOp -> '*'                                       (81)
	MulOp -> '/'                                       (82)
	RelOp -> '<'                                       (83)
	RelOp -> '<='                                      (84)
	RelOp -> '>'                                       (85)
	RelOp -> '>='                                      (86)
	RelOp -> '=='                                      (87)
	RelOp -> '!='                                      (88)

-----------------------------------------------------------------------------
Terminals
-----------------------------------------------------------------------------
	'!'            { PT _ (TS _ 1) }
	'!='           { PT _ (TS _ 2) }
	'&&'           { PT _ (TS _ 3) }
	'('            { PT _ (TS _ 4) }
	')'            { PT _ (TS _ 5) }
	'*'            { PT _ (TS _ 6) }
	'+'            { PT _ (TS _ 7) }
	','            { PT _ (TS _ 8) }
	'-'            { PT _ (TS _ 9) }
	'.'            { PT _ (TS _ 10) }
	'/'            { PT _ (TS _ 11) }
	';'            { PT _ (TS _ 12) }
	'<'            { PT _ (TS _ 13) }
	'<='           { PT _ (TS _ 14) }
	'='            { PT _ (TS _ 15) }
	'=='           { PT _ (TS _ 16) }
	'>'            { PT _ (TS _ 17) }
	'>='           { PT _ (TS _ 18) }
	'List'         { PT _ (TS _ 19) }
	'['            { PT _ (TS _ 20) }
	']'            { PT _ (TS _ 21) }
	'bool'         { PT _ (TS _ 22) }
	'break'        { PT _ (TS _ 23) }
	'continue'     { PT _ (TS _ 24) }
	'else'         { PT _ (TS _ 25) }
	'false'        { PT _ (TS _ 26) }
	'if'           { PT _ (TS _ 27) }
	'int'          { PT _ (TS _ 28) }
	'length'       { PT _ (TS _ 29) }
	'pop'          { PT _ (TS _ 30) }
	'print'        { PT _ (TS _ 31) }
	'push'         { PT _ (TS _ 32) }
	'ref'          { PT _ (TS _ 33) }
	'return'       { PT _ (TS _ 34) }
	'string'       { PT _ (TS _ 35) }
	'true'         { PT _ (TS _ 36) }
	'while'        { PT _ (TS _ 37) }
	'{'            { PT _ (TS _ 38) }
	'||'           { PT _ (TS _ 39) }
	'}'            { PT _ (TS _ 40) }
	L_Ident        { PT _ (TV $$) }
	L_integ        { PT _ (TI $$) }
	L_quoted       { PT _ (TL $$) }

-----------------------------------------------------------------------------
Non-terminals
-----------------------------------------------------------------------------
	%start_pProgram rule  0
	Ident           rule  1
	Integer         rule  2
	String          rule  3
	Program         rule  4
	Fn              rule  5
	ListFn          rules 6, 7
	Arg             rules 8, 9
	ListArg         rules 10, 11, 12
	Block           rule  13
	ListStmt        rules 14, 15, 16
	Stmt            rules 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29, 30
	Item            rules 31, 32
	ListItem        rules 33, 34
	Type            rules 35, 36, 37, 38
	ListType        rules 39, 40, 41
	TypeOrRef       rules 42, 43
	ListTypeOrRef   rules 44, 45, 46
	Expr7           rules 47, 48, 49, 50, 51, 52, 53
	Expr6           rules 54, 55
	Expr5           rules 56, 57, 58, 59, 60
	Expr4           rules 61, 62
	Expr3           rules 63, 64
	Expr2           rules 65, 66
	Expr1           rules 67, 68
	Expr            rules 69, 70
	ListExpr        rules 71, 72, 73
	ExprOrRef       rules 74, 75
	ListExprOrRef   rules 76, 77, 78
	AddOp           rules 79, 80
	MulOp           rules 81, 82
	RelOp           rules 83, 84, 85, 86, 87, 88

-----------------------------------------------------------------------------
States
-----------------------------------------------------------------------------
State 0

	%start_pProgram -> . Program                        (rule 0)

	'List'         shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10

	Program        goto state 3
	Fn             goto state 4
	ListFn         goto state 5
	Type           goto state 6

State 1

	Ident -> . L_Ident                                  (rule 1)

	L_Ident        shift, and enter state 2


State 2

	Ident -> L_Ident .                                  (rule 1)

	'!='           reduce using rule 1
	'&&'           reduce using rule 1
	'('            reduce using rule 1
	')'            reduce using rule 1
	'*'            reduce using rule 1
	'+'            reduce using rule 1
	','            reduce using rule 1
	'-'            reduce using rule 1
	'.'            reduce using rule 1
	'/'            reduce using rule 1
	';'            reduce using rule 1
	'<'            reduce using rule 1
	'<='           reduce using rule 1
	'='            reduce using rule 1
	'=='           reduce using rule 1
	'>'            reduce using rule 1
	'>='           reduce using rule 1
	'['            reduce using rule 1
	']'            reduce using rule 1
	'{'            reduce using rule 1
	'||'           reduce using rule 1
	'}'            reduce using rule 1


State 3

	%start_pProgram -> Program .                        (rule 0)

	%eof           accept


State 4

	ListFn -> Fn .                                      (rule 6)
	ListFn -> Fn . ListFn                               (rule 7)

	'List'         shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	%eof           reduce using rule 6

	Fn             goto state 4
	ListFn         goto state 13
	Type           goto state 6

State 5

	Program -> ListFn .                                 (rule 4)

	%eof           reduce using rule 4


State 6

	Fn -> Type . Ident '(' ListArg ')' Block            (rule 5)

	L_Ident        shift, and enter state 2

	Ident          goto state 12

State 7

	Type -> 'List' . '<' Type '>'                       (rule 38)

	'<'            shift, and enter state 11


State 8

	Type -> 'bool' .                                    (rule 37)

	'>'            reduce using rule 37
	'['            reduce using rule 37
	L_Ident        reduce using rule 37


State 9

	Type -> 'int' .                                     (rule 35)

	'>'            reduce using rule 35
	'['            reduce using rule 35
	L_Ident        reduce using rule 35


State 10

	Type -> 'string' .                                  (rule 36)

	'>'            reduce using rule 36
	'['            reduce using rule 36
	L_Ident        reduce using rule 36


State 11

	Type -> 'List' '<' . Type '>'                       (rule 38)

	'List'         shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10

	Type           goto state 15

State 12

	Fn -> Type Ident . '(' ListArg ')' Block            (rule 5)

	'('            shift, and enter state 14


State 13

	ListFn -> Fn ListFn .                               (rule 7)

	%eof           reduce using rule 7


State 14

	Fn -> Type Ident '(' . ListArg ')' Block            (rule 5)

	')'            reduce using rule 10
	'List'         shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'ref'          shift, and enter state 20
	'string'       shift, and enter state 10

	Arg            goto state 17
	ListArg        goto state 18
	Type           goto state 19

State 15

	Type -> 'List' '<' Type . '>'                       (rule 38)

	'>'            shift, and enter state 16


State 16

	Type -> 'List' '<' Type '>' .                       (rule 38)

	'>'            reduce using rule 38
	'['            reduce using rule 38
	L_Ident        reduce using rule 38


State 17

	ListArg -> Arg .                                    (rule 11)
	ListArg -> Arg . ',' ListArg                        (rule 12)

	')'            reduce using rule 11
	','            shift, and enter state 24


State 18

	Fn -> Type Ident '(' ListArg . ')' Block            (rule 5)

	')'            shift, and enter state 23


State 19

	Arg -> Type . Ident                                 (rule 8)

	L_Ident        shift, and enter state 2

	Ident          goto state 22

State 20

	Arg -> 'ref' . Type Ident                           (rule 9)

	'List'         shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10

	Type           goto state 21

State 21

	Arg -> 'ref' Type . Ident                           (rule 9)

	L_Ident        shift, and enter state 2

	Ident          goto state 28

State 22

	Arg -> Type Ident .                                 (rule 8)

	')'            reduce using rule 8
	','            reduce using rule 8


State 23

	Fn -> Type Ident '(' ListArg ')' . Block            (rule 5)

	'{'            shift, and enter state 27

	Block          goto state 26

State 24

	ListArg -> Arg ',' . ListArg                        (rule 12)

	')'            reduce using rule 10
	'List'         shift, and enter state 7
	'bool'         shift, and enter state 8
	'int'          shift, and enter state 9
	'ref'          shift, and enter state 20
	'string'       shift, and enter state 10

	Arg            goto state 17
	ListArg        goto state 25
	Type           goto state 19

State 25

	ListArg -> Arg ',' ListArg .                        (rule 12)

	')'            reduce using rule 12


State 26

	Fn -> Type Ident '(' ListArg ')' Block .            (rule 5)

	';'            reduce using rule 5
	'List'         reduce using rule 5
	'bool'         reduce using rule 5
	'int'          reduce using rule 5
	'string'       reduce using rule 5
	'}'            reduce using rule 5
	%eof           reduce using rule 5


State 27

	Block -> '{' . ListStmt '}'                         (rule 13)

	'!'            shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'List'         shift, and enter state 7
	'bool'         shift, and enter state 8
	'break'        shift, and enter state 48
	'continue'     shift, and enter state 49
	'false'        shift, and enter state 50
	'if'           shift, and enter state 51
	'int'          shift, and enter state 9
	'print'        shift, and enter state 52
	'return'       shift, and enter state 53
	'string'       shift, and enter state 10
	'true'         shift, and enter state 54
	'while'        shift, and enter state 55
	'{'            shift, and enter state 27
	'}'            reduce using rule 14
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 56
	L_quoted       shift, and enter state 57

	Ident          goto state 29
	Integer        goto state 30
	String         goto state 31
	Fn             goto state 32
	Block          goto state 33
	ListStmt       goto state 34
	Stmt           goto state 35
	Type           goto state 36
	Expr7          goto state 37
	Expr6          goto state 38
	Expr5          goto state 39
	Expr4          goto state 40
	Expr3          goto state 41
	Expr2          goto state 42
	Expr1          goto state 43
	Expr           goto state 44

State 28

	Arg -> 'ref' Type Ident .                           (rule 9)

	')'            reduce using rule 9
	','            reduce using rule 9


State 29

	Stmt -> Ident . '=' Expr                            (rule 20)
	Stmt -> Ident . '.' 'push' Expr                     (rule 22)
	Stmt -> Ident . '.' 'pop'                           (rule 23)
	Expr7 -> Ident .                                    (rule 47)
	Expr5 -> Ident . '.' 'length'                       (rule 56)
	Expr5 -> Ident . '[' Expr ']'                       (rule 57)

	'!='           reduce using rule 47
	'&&'           reduce using rule 47
	'('            reduce using rule 47
	'*'            reduce using rule 47
	'+'            reduce using rule 47
	'-'            reduce using rule 47
	'.'            shift, and enter state 90
	'/'            reduce using rule 47
	';'            reduce using rule 47
	'<'            reduce using rule 47
	'<='           reduce using rule 47
	'='            shift, and enter state 91
	'=='           reduce using rule 47
	'>'            reduce using rule 47
	'>='           reduce using rule 47
	'['            shift, and enter state 92
	'||'           reduce using rule 47
	'}'            reduce using rule 47


State 30

	Expr7 -> Integer .                                  (rule 49)

	'!='           reduce using rule 49
	'&&'           reduce using rule 49
	'('            reduce using rule 49
	')'            reduce using rule 49
	'*'            reduce using rule 49
	'+'            reduce using rule 49
	','            reduce using rule 49
	'-'            reduce using rule 49
	'/'            reduce using rule 49
	';'            reduce using rule 49
	'<'            reduce using rule 49
	'<='           reduce using rule 49
	'=='           reduce using rule 49
	'>'            reduce using rule 49
	'>='           reduce using rule 49
	']'            reduce using rule 49
	'{'            reduce using rule 49
	'||'           reduce using rule 49
	'}'            reduce using rule 49


State 31

	Expr7 -> String .                                   (rule 52)

	'!='           reduce using rule 52
	'&&'           reduce using rule 52
	'('            reduce using rule 52
	')'            reduce using rule 52
	'*'            reduce using rule 52
	'+'            reduce using rule 52
	','            reduce using rule 52
	'-'            reduce using rule 52
	'/'            reduce using rule 52
	';'            reduce using rule 52
	'<'            reduce using rule 52
	'<='           reduce using rule 52
	'=='           reduce using rule 52
	'>'            reduce using rule 52
	'>='           reduce using rule 52
	']'            reduce using rule 52
	'{'            reduce using rule 52
	'||'           reduce using rule 52
	'}'            reduce using rule 52


State 32

	Stmt -> Fn .                                        (rule 30)

	';'            reduce using rule 30
	'}'            reduce using rule 30


State 33

	Stmt -> Block .                                     (rule 17)

	';'            reduce using rule 17
	'}'            reduce using rule 17


State 34

	Block -> '{' ListStmt . '}'                         (rule 13)

	'}'            shift, and enter state 89


State 35

	ListStmt -> Stmt .                                  (rule 15)
	ListStmt -> Stmt . ';' ListStmt                     (rule 16)

	';'            shift, and enter state 88
	'}'            reduce using rule 15


State 36

	Fn -> Type . Ident '(' ListArg ')' Block            (rule 5)
	Stmt -> Type . ListItem                             (rule 18)
	Expr7 -> Type . '[' ListExpr ']'                    (rule 48)

	'['            shift, and enter state 87
	L_Ident        shift, and enter state 2

	Ident          goto state 84
	Item           goto state 85
	ListItem       goto state 86

State 37

	Expr6 -> Expr7 .                                    (rule 55)

	'!='           reduce using rule 55
	'&&'           reduce using rule 55
	'('            reduce using rule 55
	')'            reduce using rule 55
	'*'            reduce using rule 55
	'+'            reduce using rule 55
	','            reduce using rule 55
	'-'            reduce using rule 55
	'/'            reduce using rule 55
	';'            reduce using rule 55
	'<'            reduce using rule 55
	'<='           reduce using rule 55
	'=='           reduce using rule 55
	'>'            reduce using rule 55
	'>='           reduce using rule 55
	']'            reduce using rule 55
	'{'            reduce using rule 55
	'||'           reduce using rule 55
	'}'            reduce using rule 55


State 38

	Expr6 -> Expr6 . '(' ListExprOrRef ')'              (rule 54)
	Expr5 -> Expr6 .                                    (rule 60)

	'!='           reduce using rule 60
	'&&'           reduce using rule 60
	'('            shift, and enter state 83
	')'            reduce using rule 60
	'*'            reduce using rule 60
	'+'            reduce using rule 60
	','            reduce using rule 60
	'-'            reduce using rule 60
	'/'            reduce using rule 60
	';'            reduce using rule 60
	'<'            reduce using rule 60
	'<='           reduce using rule 60
	'=='           reduce using rule 60
	'>'            reduce using rule 60
	'>='           reduce using rule 60
	']'            reduce using rule 60
	'{'            reduce using rule 60
	'||'           reduce using rule 60
	'}'            reduce using rule 60


State 39

	Expr4 -> Expr5 .                                    (rule 62)

	'!='           reduce using rule 62
	'&&'           reduce using rule 62
	')'            reduce using rule 62
	'*'            reduce using rule 62
	'+'            reduce using rule 62
	','            reduce using rule 62
	'-'            reduce using rule 62
	'/'            reduce using rule 62
	';'            reduce using rule 62
	'<'            reduce using rule 62
	'<='           reduce using rule 62
	'=='           reduce using rule 62
	'>'            reduce using rule 62
	'>='           reduce using rule 62
	']'            reduce using rule 62
	'{'            reduce using rule 62
	'||'           reduce using rule 62
	'}'            reduce using rule 62


State 40

	Expr4 -> Expr4 . MulOp Expr5                        (rule 61)
	Expr3 -> Expr4 .                                    (rule 64)

	'!='           reduce using rule 64
	'&&'           reduce using rule 64
	')'            reduce using rule 64
	'*'            shift, and enter state 81
	'+'            reduce using rule 64
	','            reduce using rule 64
	'-'            reduce using rule 64
	'/'            shift, and enter state 82
	';'            reduce using rule 64
	'<'            reduce using rule 64
	'<='           reduce using rule 64
	'=='           reduce using rule 64
	'>'            reduce using rule 64
	'>='           reduce using rule 64
	']'            reduce using rule 64
	'{'            reduce using rule 64
	'||'           reduce using rule 64
	'}'            reduce using rule 64

	MulOp          goto state 80

State 41

	Expr3 -> Expr3 . AddOp Expr4                        (rule 63)
	Expr2 -> Expr3 .                                    (rule 66)

	'!='           reduce using rule 66
	'&&'           reduce using rule 66
	')'            reduce using rule 66
	'+'            shift, and enter state 78
	','            reduce using rule 66
	'-'            shift, and enter state 79
	';'            reduce using rule 66
	'<'            reduce using rule 66
	'<='           reduce using rule 66
	'=='           reduce using rule 66
	'>'            reduce using rule 66
	'>='           reduce using rule 66
	']'            reduce using rule 66
	'{'            reduce using rule 66
	'||'           reduce using rule 66
	'}'            reduce using rule 66

	AddOp          goto state 77

State 42

	Expr2 -> Expr2 . RelOp Expr3                        (rule 65)
	Expr1 -> Expr2 . '&&' Expr1                         (rule 67)
	Expr1 -> Expr2 .                                    (rule 68)

	'!='           shift, and enter state 70
	'&&'           shift, and enter state 71
	')'            reduce using rule 68
	','            reduce using rule 68
	';'            reduce using rule 68
	'<'            shift, and enter state 72
	'<='           shift, and enter state 73
	'=='           shift, and enter state 74
	'>'            shift, and enter state 75
	'>='           shift, and enter state 76
	']'            reduce using rule 68
	'{'            reduce using rule 68
	'||'           reduce using rule 68
	'}'            reduce using rule 68

	RelOp          goto state 69

State 43

	Expr -> Expr1 . '||' Expr                           (rule 69)
	Expr -> Expr1 .                                     (rule 70)

	')'            reduce using rule 70
	','            reduce using rule 70
	';'            reduce using rule 70
	']'            reduce using rule 70
	'{'            reduce using rule 70
	'||'           shift, and enter state 68
	'}'            reduce using rule 70


State 44

	Stmt -> Expr .                                      (rule 19)

	';'            reduce using rule 19
	'}'            reduce using rule 19


State 45

	Expr5 -> '!' . Expr6                                (rule 59)

	'('            shift, and enter state 46
	'List'         shift, and enter state 7
	'bool'         shift, and enter state 8
	'false'        shift, and enter state 50
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'true'         shift, and enter state 54
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 56
	L_quoted       shift, and enter state 57

	Ident          goto state 64
	Integer        goto state 30
	String         goto state 31
	Type           goto state 59
	Expr7          goto state 37
	Expr6          goto state 67

State 46

	Expr7 -> '(' . Expr ')'                             (rule 53)

	'!'            shift, and enter state 45
	'('            shift, and enter state 46
	'-'            shift, and enter state 47
	'List'         shift, and enter state 7
	'bool'         shift, and enter state 8
	'false'        shift, and enter state 50
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'true'         shift, and enter state 54
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 56
	L_quoted       shift, and enter state 57

	Ident          goto state 58
	Integer        goto state 30
	String         goto state 31
	Type           goto state 59
	Expr7          goto state 37
	Expr6          goto state 38
	Expr5          goto state 39
	Expr4          goto state 40
	Expr3          goto state 41
	Expr2          goto state 42
	Expr1          goto state 43
	Expr           goto state 66

State 47

	Expr5 -> '-' . Expr6                                (rule 58)

	'('            shift, and enter state 46
	'List'         shift, and enter state 7
	'bool'         shift, and enter state 8
	'false'        shift, and enter state 50
	'int'          shift, and enter state 9
	'string'       shift, and enter state 10
	'true'         shift, and enter state 54
	L_Ident        shift, and enter state 2
	L_integ        shift, and enter state 56
	L_quoted       shift, and enter state 57

	Ident          goto state 64
	Integer        goto state 30
	String         goto state 31
	Type           goto state 59
	Expr7          goto state 37
	Expr6          goto state 65

State 48

	Stmt -> 'break' .                                   (rule 27)

	';'            reduce using rule 27
	'}'            reduce using rule 27


State 49

	Stmt -> 'continue' .                                (rule 28)

	';'            reduce using rule 28
	'}'            reduce using rule 28


State 50

	Expr7 -> 'false' .                                  (rule 51)
